Fixed letter spacing

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -12,6 +12,10 @@
   /* justify-content: space-evenly; */
 }
 
+.EmptyResults{
+  letter-spacing: 0.1em;
+}
+
 .displayResults{
   color: silver;
   background-color: blue;
